--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.activity.CommentActivity"/>
         <activity android:name=".ui.activity.ThemeActivity" />
         <activity android:name=".ui.activity.AboutRedActivity"/>
+        <activity android:name=".ui.activity.WebViewActivity"/>
 
     </application>
 
